# troy

./: readme.md
app/: LinearHelper.cuh  LinearHelperCKKS.cuh  TroyFHEWrapper.cu  TroyFHEWrapper.cuh
src/: CMakeLists.txt
src/cmake/: troyConfig.cmake  troyConfig.cmake.in
test/: CMakeLists.txt
test/app/: TroyFHEWrapper.cu.backup  TroyFHEWrapper.h.backup  linear.cu  wrapper_test.cpp
